# finance-tracker

./: .gitignore  README.md  README_NOTES_FEATURE.md  README_PAYMENT_FILTERING.md  README_SCHEMA_NORMALIZATION.md  pyproject.toml  run_app.py
configs/: apple_card_schema.json  category_mapping.json  chase_amazon_schema.json  chase_schema.json  wells_fargo_schema.json
data/: DATA_FOLDER_STRUCTURE.md
src/finance_tracker/: __init__.py  app.py  bank_reader.py  category_normalizer.py  notes_manager.py
tests/: test_payment_filtering.py  test_real_data.py  test_schema_normalization.py
